# srt-rs

./: Cargo.toml  LICENSE  README.md
assets/: test.srt
src/: lib.rs  parser.rs
